--- a/csl-frontend/components/header/Header.module.scss
+++ b/csl-frontend/components/header/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
-  --tw-gradient-from: #232325;
+  --tw-gradient-from: var(--color-header-highlight-bg);
   --tw-gradient-stops: var(--tw-gradient-from),
     var(--tw-gradient-to, rgba(255, 255, 255, 0));
   --tw-gradient-to: var(--color-header-bg);
@@ -9,7 +9,7 @@
   flex-direction: column;
 
   background-color: var(--color-header-bg);
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid var(--color-border);
   height: var(--header-height);
   width: 100%;
 
@@ -52,6 +52,8 @@
   }
 
   &Li {
+    position: relative;
+
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -175,6 +177,30 @@
     margin: 0 5px;
     transform: rotate(25deg);
     background-color: #444;
+  }
+}
+
+.invite {
+  position: absolute;
+
+  height: 15px;
+  width: 15px;
+  background-color: var(--color-header-bg);
+  border-radius: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.8rem;
+  color: var(--color-highlight);
+  border: 1px solid var(--color-border);
+
+  opacity: 0;
+
+  top: 5px;
+  right: -5px;
+
+  &Active {
+    opacity: 1;
   }
 }
 
