--- a/csl-frontend/components/header/menu/Menu.module.scss
+++ b/csl-frontend/components/header/menu/Menu.module.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
     padding: 0;
-    background-color: #333;
+    background-color: var(--color-background-modal);
 
     li {
       margin: 0;
@@ -48,7 +48,11 @@
     padding: 20px;
     position: relative;
     z-index: 2;
-    background: linear-gradient(180deg, rgba(20, 20, 20, 0.5) 0, #333);
+    background: linear-gradient(
+      180deg,
+      rgba(20, 20, 20, 0.5) 0,
+      var(--color-background-modal)
+    );
     width: 100%;
     height: 100%;
 
@@ -96,7 +100,7 @@
   border-right: 2px solid transparent;
 
   &:hover {
-    background-color: #222;
+    background-color: var(--color-background-modal-content);
 
     border-left: 2px solid var(--color-highlight);
     border-right: 2px solid var(--color-highlight);
@@ -107,7 +111,7 @@
     height: 1px;
     place-self: center;
     margin: 8px 0;
-    background-color: rgb(92, 92, 92);
+    background-color: var(--color-border);
   }
 }
 
@@ -133,7 +137,7 @@
   svg {
     width: 100%;
     height: 30px;
-    fill: #333;
+    fill: var(--color-background-modal);
     transform: rotate(180deg);
   }
 }
