--- a/csl-frontend/components/footer/Footer.module.scss
+++ b/csl-frontend/components/footer/Footer.module.scss
@@ -38,4 +38,16 @@
       color: var(--color-text);
     }
   }
+
+  @include mobile {
+    .footer {
+      &Content {
+        font-size: 0.6rem;
+
+        span {
+          margin: 0 2px;
+        }
+      }
+    }
+  }
 }
