--- a/csl-frontend/styles/global.scss
+++ b/csl-frontend/styles/global.scss
@@ -63,6 +63,7 @@
   --color-submit-bg-hover: #5468b1;
 
   --color-highlight: #{$color-highlight};
+  --color-fight: #e74545;
 }
 
 html[data-theme='dark'] {
