--- a/csl-frontend/components/header/menu/Menu.module.scss
+++ b/csl-frontend/components/header/menu/Menu.module.scss
@@ -21,6 +21,10 @@
       align-items: center;
       gap: 5px;
 
+      a {
+        width: 100%;
+      }
+
       * {
         display: flex;
         align-items: center;
