--- a/csl-frontend/components/room/Room.module.scss
+++ b/csl-frontend/components/room/Room.module.scss
@@ -1,4 +1,8 @@
 .room {
+  * {
+    user-select: none;
+  }
+
   position: sticky;
   bottom: 0;
   right: 0;
@@ -27,9 +31,15 @@
     border: 1px solid transparent;
 
     &:hover {
-      box-shadow: 0 0 35px var(--color-highlight);
+      box-shadow: 0 0 25px var(--color-highlight);
       border: 1px solid var(--color-border);
       transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
+
+      .start {
+        opacity: 1;
+        transform: translateX(-50px);
+        transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
+      }
     }
     transition: all 0.2s ease-out;
   }
@@ -37,7 +47,7 @@
 }
 
 .create {
-  z-index: 10;
+  z-index: 15;
 
   position: relative;
   width: 40px;
@@ -51,6 +61,8 @@
 }
 
 .players {
+  z-index: 15;
+
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -206,5 +218,78 @@
   &Friend {
     margin-right: var(--friend-aside-width);
     transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
+  }
+}
+
+.info {
+  position: absolute;
+
+  top: -30px;
+  right: 0;
+
+  width: 100%;
+  height: 25px;
+
+  background-color: red;
+
+  &Item {
+  }
+}
+
+.start {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  height: 100%;
+  width: 50px;
+
+  transform: translateX(0px);
+  opacity: 0;
+  transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
+  padding: 9px;
+
+  display: flex;
+  align-self: center;
+  justify-content: center;
+
+  &Content {
+    background-color: var(--color-background-content);
+    border: 1px solid var(--color-fight);
+    box-shadow: 0 0 15px var(--color-fight);
+    border-radius: 50%;
+
+    width: 30px;
+    height: 30px;
+
+    > * {
+      height: 100%;
+      width: 100%;
+
+      cursor: pointer;
+    }
+  }
+}
+
+.search {
+  position: absolute;
+
+  top: -30px;
+  right: 0;
+
+  width: 100%;
+  height: 25px;
+
+  &Content {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    align-self: center;
+    justify-content: center;
+
+    span {
+      color: var(--color-highlight);
+    }
   }
 }
