--- a/csl-frontend/styles/lobbies/Lobbies.module.scss
+++ b/csl-frontend/styles/lobbies/Lobbies.module.scss
@@ -55,6 +55,11 @@ $circle-scale: 100px;
     .Active {
     }
   }
+
+  @include mobile {
+    width: 100%;
+  }
+
   transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
