--- a/csl-frontend/styles/friends/Friends.module.scss
+++ b/csl-frontend/styles/friends/Friends.module.scss
@@ -49,7 +49,6 @@
 .item {
   position: relative;
 
-  width: 25%;
   // margin: 5px 10px;
 
   cursor: pointer;
@@ -86,41 +85,17 @@
       transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
     }
   }
-}
 
-.lobby {
-  &Header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  @include desktop {
+    width: 25%;
   }
 
-  &Hr {
+  @include tablet {
+    width: 33%;
+  }
+
+  @include mobile {
     width: 100%;
-    height: 1px;
-    background-color: var(--color-border);
-    margin: 5px 0;
-  }
-
-  &Inner {
-    width: 100%;
-    height: 100%;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-
-    padding: 4px;
-  }
-
-  &Player {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: red;
-    margin: 2px;
   }
 }
 
@@ -152,12 +127,18 @@
     .Active {
     }
   }
+
+  @include mobile {
+    width: 100%;
+  }
+
   transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .search {
   width: 100%;
   margin: 10px 2px;
+  padding: 0 5px;
 }
 
 .list {
