--- a/csl-frontend/styles/global.scss
+++ b/csl-frontend/styles/global.scss
@@ -99,6 +99,8 @@ html[data-theme='dark'] {
   --color-button-bg-hover: #{$color-button-bg-hover-dark};
 
   --ripple-background: #{$ripple-background-dark};
+
+  --color-highlight: #{$color-highlight-dark};
 }
 
 html[data-theme='blue'] {
@@ -134,6 +136,8 @@ html[data-theme='blue'] {
   --color-button-bg-hover: #{$color-button-bg-hover-blue};
 
   --ripple-background: #{$ripple-background-blue};
+
+  --color-highlight: #{$color-highlight-blue};
 }
 
 html {
