--- a/csl-frontend/styles/layouts/Layouts.module.scss
+++ b/csl-frontend/styles/layouts/Layouts.module.scss
@@ -99,6 +99,132 @@
       }
     }
   }
+
+  &Game {
+    &Title {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      width: 100%;
+
+      h1 {
+        color: var(--color-text);
+        font-size: 1.25rem;
+        font-weight: 900;
+        letter-spacing: 10px;
+        text-transform: uppercase;
+      }
+
+      hr {
+        width: 50%;
+        height: 1px;
+        background-color: var(--color-border);
+        opacity: 0.5;
+        margin: 5px;
+      }
+    }
+
+    &Various {
+      position: relative;
+      width: 50%;
+      border-top: 1px solid var(--color-border);
+      margin: 0 auto;
+
+      span {
+        position: absolute;
+        top: -1px;
+        height: 3px;
+        width: 100px;
+        background-color: var(--color-highlight);
+        color: var(--color-text);
+
+        transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+      }
+
+      button {
+        font-size: 1rem;
+        padding: 0 10px;
+        height: 35px;
+        width: 100px;
+        cursor: pointer;
+        color: var(--color-text);
+
+        .Active {
+        }
+      }
+
+      @include mobile {
+        width: 100%;
+      }
+
+      transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+  }
+
+  &Friends {
+    &Title {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      width: 100%;
+
+      h1 {
+        color: var(--color-text);
+        font-size: 1.25rem;
+        font-weight: 900;
+        letter-spacing: 10px;
+        text-transform: uppercase;
+      }
+
+      hr {
+        width: 50%;
+        height: 1px;
+        background-color: var(--color-border);
+        opacity: 0.5;
+        margin: 5px;
+      }
+    }
+
+    &Various {
+      position: relative;
+      width: 50%;
+      border-top: 1px solid var(--color-border);
+      margin: 0 auto;
+
+      span {
+        position: absolute;
+        top: -1px;
+        height: 3px;
+        width: 100px;
+        background-color: var(--color-highlight);
+        color: var(--color-text);
+
+        transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+      }
+
+      button {
+        font-size: 1rem;
+        padding: 0 10px;
+        height: 35px;
+        width: 100px;
+        cursor: pointer;
+        color: var(--color-text);
+
+        .Active {
+        }
+      }
+
+      @include mobile {
+        width: 100%;
+      }
+
+      transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+  }
 }
 
 @keyframes auth-open-second {
