--- a/csl-frontend/styles/layouts/Layouts.module.scss
+++ b/csl-frontend/styles/layouts/Layouts.module.scss
@@ -24,84 +24,9 @@
     }
   }
 
-  &Auth {
-    // position: relative;
-    // top: 0;
-    // left: 0;
-    // width: 100vw;
-    // height: 100vh;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
-    // justify-content: center;
-
-    position: fixed;
-
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
-    z-index: 15;
-    transform-origin: 0 0;
-
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-
-    &Svg {
-      &First {
-        height: 250px;
-        width: 100%;
-        position: absolute;
-        fill: var(--color-header-bg);
-        // fill: var(--color-highlight);
-        top: 0px;
-      }
-      &Second {
-        height: 250px;
-        width: 100%;
-        position: absolute;
-        fill: var(--color-header-bg);
-        // fill: var(--color-highlight);
-        bottom: 0px;
-      }
-    }
-
-    &Open {
-      display: flex;
-
-      svg {
-        &:first-child {
-          // fill: red;
-          animation: auth-open-first 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
-        }
-
-        &:last-child {
-          // fill: red;
-          animation: auth-open-second 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
-        }
-      }
-    }
-
-    &Close {
-      svg {
-        &:first-child {
-          // fill: red;
-          animation: auth-close-first 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
-        }
-
-        &:last-child {
-          // fill: red;
-          animation: auth-close-second 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
-        }
-      }
-    }
-  }
-
   &Game {
     &Title {
+      margin-top: var(--header-height);
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -176,6 +101,7 @@
 
   &Friends {
     &Title {
+      margin-top: var(--header-height);
       display: flex;
       flex-direction: column;
       align-items: center;
